# s_spatioloji

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  justfile  pyproject.toml  zensical.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml
docs/: api.md  index.md  installation.md  usage.md
docs/superpowers/plans/: 2026-03-13-spatial-point.md  2026-03-13-spatial-polygon.md  2026-03-13-visualization.md  2026-03-13-xenium-images.md
docs/superpowers/specs/: 2026-03-13-compute-layer-design.md  2026-03-13-spatial-point-design.md  2026-03-13-spatial-polygon-design.md  2026-03-13-visualization-design.md  2026-03-13-xenium-images-design.md
examples/: 01_basic_workflow.ipynb  02_spatial_analysis.ipynb
src/s_spatioloji/: __init__.py  cli.py
src/s_spatioloji/compute/: __init__.py  _runner.py  _scvi.py  batch_correction.py  clustering.py  feature_selection.py  imputation.py  normalize.py  reduction.py
src/s_spatioloji/data/: __init__.py  boundaries.py  cells.py  config.py  core.py  expression.py  images.py  io.py
src/s_spatioloji/spatial/: __init__.py
src/s_spatioloji/spatial/point/: __init__.py  graph.py  neighborhoods.py  patterns.py  ripley.py  statistics.py
src/s_spatioloji/spatial/polygon/: __init__.py  graph.py  morphology.py  neighborhoods.py  patterns.py  statistics.py
src/s_spatioloji/visualization/: __init__.py  _common.py  analysis.py  embedding.py  expression.py  spatial.py
tests/: test_s_spatioloji.py
tests/unit/: conftest.py  test_boundaries.py  test_cells.py  test_compute_batch.py  test_compute_clustering.py  test_compute_feature_selection.py  test_compute_imputation.py  test_compute_maps.py  test_compute_normalize.py  test_compute_reduction.py  test_compute_runner.py  test_config.py  test_core.py  test_expression.py  test_images.py  test_io.py  test_spatial_point_graph.py  test_spatial_point_neighborhoods.py  test_spatial_point_patterns.py  test_spatial_point_ripley.py  test_spatial_point_statistics.py  test_spatial_polygon_graph.py  test_spatial_polygon_morphology.py  test_spatial_polygon_neighborhoods.py  test_spatial_polygon_patterns.py  test_spatial_polygon_statistics.py  test_visualization_analysis.py  test_visualization_common.py  test_visualization_embedding.py  test_visualization_expression.py  test_visualization_spatial.py
